Update HTML &CSS

--- a/index.html
+++ b/index.html
@@ -25,23 +25,49 @@
         <div class="col"><h3>Tomorrow</h3></div>
         <div class="col"><h3>5 days</h3></div>
       </div>
+      <br />
 
       <input
         type="text"
         class="form-control city"
         placeholder="Select City 🔎"
       />
+      <span>
+        <input type="submit" value="Search" class="search-button" />
+      </span>
+
+      <button class="current-location">Current</button>
+
+      <br />
+      <br />
+      <p>Johannesburg, South Africa 📍</p>
+      <br />
 
       <p><strong>11 February, 17:45</strong></p>
       <p>Day 20° | Night 16°</p>
-      <h1>
-        19°C
-        <i class="fa-sharp fa-solid fa-sun sunny"></i>
-      </h1>
-      <p>
-        Johannesburg, South Africa 📍
-        <span class="today-weather">Mostly sunny</span>
-      </p>
+      <br />
+      <div class="row">
+        <div class="col-6">
+          <h1>
+            <i class="fa-solid fa-cloud-showers-heavy"></i>
+            19
+          </h1>
+          <span>
+            <p class="unit">°C | F°</p>
+          </span>
+        </div>
+        <div class="col-6">
+          <ul>
+            <li>Percipation 80%</li>
+            <li>Humidity 50%</li>
+            <li>Wind 6km/h</li>
+          </ul>
+        </div>
+      </div>
+      <br />
+      <p class="today-weather">Thunder Storms</p>
+      <br />
+      <br />
       <br />
       <p class="forecast">
         60%
