Added developer signature

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         60%
         <span class="forecast2">60%</span>
         <span class="forecast3">60%</span>
-        <span class="forecast4">60%</span>
+        <span class="forecast4">60%</span>b
         <span class="forecast5">60%</span>
         <br />
       </p>
@@ -96,204 +96,13 @@
       </div>
       <br />
     </div>
+    <a href="https://github.com/SiyamukelaZwane/sheCodesPlusProject">
+      Open source-code</a
+    >
+    <span>
+      <p class="developer">by Siyamukela Zwane</p>
+    </span>
     <br />
     <br />
-    <div class="container block">
-      <div class="row row-header">
-        <div class="col-4"><h3>Today</h3></div>
-        <div class="col-4 tomorrow"><h3>Tomorrow</h3></div>
-        <div class="col"><h3>5 days</h3></div>
-      </div>
-
-      <input
-        type="text"
-        class="form-control city"
-        placeholder="Select City 🔎"
-      />
-      <br />
-      <br />
-      <p><strong> Sunday 12 February</strong></p>
-      <p>
-        Day 20° | Night 16°
-        <br />
-        <strong sunday> Sunny </strong>
-        <i class="fa-sharp fa-solid fa-sun sunny2"></i>
-      </p>
-      <p>
-        Johannesburg, South Africa 📍
-        <span class="today-weather2">Mostly sunny</span>
-      </p>
-      <br />
-      <p class="forecast">
-        60%
-        <span class="forecast2">60%</span>
-        <span class="forecast3">60%</span>
-        <span class="forecast4">60%</span>
-        <span class="forecast5">60%</span>
-        <br />
-      </p>
-      <i class="fa-solid fa-cloud cloudy"></i>
-      <i class="fa-solid fa-cloud-bolt thunder"></i>
-      <i class="fa-solid fa-cloud-showers-heavy rain"></i>
-      <i class="fa-sharp fa-solid fa-sun sunny sun"></i>
-      <i class="fa-solid fa-cloud cloudy clouds"></i>
-      <br />
-      <p class="time">
-        18:00
-        <span class="time2">19:00</span>
-        <span class="time3">20:00</span>
-        <span class="time4">21:00</span>
-        <span class="time5">22:00</span>
-      </p>
-      <br />
-      <div class="alert alert-secondary chance" role="alert">
-        ☔ 80% chance of percipitation
-      </div>
-      <br />
-    </div>
-    <br />
-    <br />
-    <div class="container block">
-      <div class="row row-header">
-        <div class="col-4"><h3>Today</h3></div>
-        <div class="col-4"><h3>Tomorrow</h3></div>
-        <div class="col-4 days-ahead"><h3>5 days</h3></div>
-      </div>
-
-      <input
-        type="text"
-        class="form-control city3"
-        placeholder="Select City 🔎"
-      />
-      <br />
-      <p><strong> Sunday 12 February</strong></p>
-      <p>
-        Day 20° | Night 16°
-        <br />
-        <strong sunday> Sunny </strong>
-        <i class="fa-sharp fa-solid fa-sun sunny2"></i>
-      </p>
-      <p>
-        Johannesburg, South Africa 📍
-        <span class="today-weather2">Mostly sunny</span>
-      </p>
-      <br />
-      <p class="forecast">
-        60%
-        <span class="forecast2">60%</span>
-        <span class="forecast3">60%</span>
-        <span class="forecast4">60%</span>
-        <span class="forecast5">60%</span>
-        <br />
-      </p>
-      <i class="fa-solid fa-cloud cloudy"></i>
-      <i class="fa-solid fa-cloud-bolt thunder"></i>
-      <i class="fa-solid fa-cloud-showers-heavy rain"></i>
-      <i class="fa-sharp fa-solid fa-sun sunny sun"></i>
-      <i class="fa-solid fa-cloud cloudy clouds"></i>
-      <br />
-      <p class="time">
-        18:00
-        <span class="time2">19:00</span>
-        <span class="time3">20:00</span>
-        <span class="time4">21:00</span>
-        <span class="time5">22:00</span>
-      </p>
-      <br />
-      <div class="alert alert-secondary chance" role="alert">
-        ☔ 80% chance of percipitation
-      </div>
-      <br />
-    </div>
-    <br />
-    <br />
-    <div class="container block">
-      <div class="row row-header">
-        <div class="col-4"><h3>Today</h3></div>
-        <div class="col-4"><h3>Tomorrow</h3></div>
-        <div class="col-4 days-ahead"><h3>5 days</h3></div>
-      </div>
-
-      <input
-        type="text"
-        class="form-control city3"
-        placeholder="Select City 🔎"
-      />
-      <br />
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">
-            Today
-            <span class="forecast6">60%</span>
-            <i class="fa-solid fa-cloud-bolt thunder1"></i>
-            <span class="temp"><strong>20°</strong></span>
-          </h5>
-          <p class="card-text">
-            Isolated thundershowers.
-            <span class="next">16°</span>
-          </p>
-        </div>
-      </div>
-      <br />
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">
-            Sunday, 12 February
-            <span class="forecast7">60%</span>
-            <i class="fa-solid fa-cloud-bolt thunder2"></i>
-            <span class="temp1"><strong>20°</strong></span>
-          </h5>
-          <p class="card-text">
-            Isolated thundershowers.
-            <span class="next2">16°</span>
-          </p>
-        </div>
-      </div>
-      <br />
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">
-            Monday, 13 February
-            <span class="forecast7">60%</span>
-            <i class="fa-solid fa-cloud-bolt thunder2"></i>
-            <span class="temp1"><strong>20°</strong></span>
-          </h5>
-          <p class="card-text">
-            Isolated thundershowers.
-            <span class="next2">16°</span>
-          </p>
-        </div>
-      </div>
-      <br />
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">
-            Tuesday, 14 February
-            <span class="forecast7">60%</span>
-            <i class="fa-solid fa-cloud-bolt thunder2"></i>
-            <span class="temp1"><strong>20°</strong></span>
-          </h5>
-          <p class="card-text">
-            Isolated thundershowers.
-            <span class="next2">16°</span>
-          </p>
-        </div>
-      </div>
-      <br />
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">
-            Wednesday, 15 February
-            <span class="forecast10">60%</span>
-            <i class="fa-solid fa-cloud-bolt thunder3"></i>
-            <span class="temp2"><strong>20°</strong></span>
-          </h5>
-          <p class="card-text">
-            Isolated thundershowers.
-            <span class="next2">16°</span>
-          </p>
-        </div>
-      </div>
-    </div>
   </body>
 </html>
