Minimise and clean up HTML and CSS

--- a/index.html
+++ b/index.html
@@ -20,89 +20,59 @@
 
   <body>
     <div class="container block">
-      <div class="row row-header">
-        <div class="col-4 today"><h3>Today</h3></div>
-        <div class="col"><h3>Tomorrow</h3></div>
-        <div class="col"><h3>5 days</h3></div>
-      </div>
-      <br />
-
-      <input
-        type="text"
-        class="form-control city"
-        placeholder="Select City 🔎"
-      />
-      <span>
-        <input type="submit" value="Search" class="search-button" />
-      </span>
-
-      <button class="current-location">Current</button>
-
-      <br />
-      <br />
-      <p>Johannesburg, South Africa 📍</p>
-      <br />
-
-      <p><strong>11 February, 17:45</strong></p>
-      <p>Day 20° | Night 16°</p>
-      <br />
-      <div class="row">
-        <div class="col-6">
-          <h1>
-            <i class="fa-solid fa-cloud-showers-heavy"></i>
-            19
-          </h1>
-          <span>
-            <p class="unit">°C | F°</p>
-          </span>
+      <div class="weather-app">
+        <div class="row row-header">
+          <div class="col-4 today"><h3>Today</h3></div>
+          <div class="col"><h3>Tomorrow</h3></div>
+          <div class="col"><h3>5 days</h3></div>
         </div>
-        <div class="col-6">
-          <ul>
-            <li>Percipation 80%</li>
-            <li>Humidity 50%</li>
-            <li>Wind 6km/h</li>
-          </ul>
-        </div>
-      </div>
-      <br />
-      <p class="today-weather">Thunder Storms</p>
-      <br />
-      <br />
-      <br />
-      <p class="forecast">
-        60%
-        <span class="forecast2">60%</span>
-        <span class="forecast3">60%</span>
-        <span class="forecast4">60%</span>b
-        <span class="forecast5">60%</span>
         <br />
-      </p>
-      <i class="fa-solid fa-cloud cloudy"></i>
-      <i class="fa-solid fa-cloud-bolt thunder"></i>
-      <i class="fa-solid fa-cloud-showers-heavy rain"></i>
-      <i class="fa-sharp fa-solid fa-sun sunny sun"></i>
-      <i class="fa-solid fa-cloud cloudy clouds"></i>
-      <br />
-      <p class="time">
-        18:00
-        <span class="time2">19:00</span>
-        <span class="time3">20:00</span>
-        <span class="time4">21:00</span>
-        <span class="time5">22:00</span>
-      </p>
-      <br />
-      <div class="alert alert-secondary chance" role="alert">
-        80% chance of percipitation today
+
+        <input
+          type="text"
+          class="form-control city"
+          placeholder="Select City 🔎"
+        />
+        <span>
+          <input type="submit" value="Search" class="search-button" />
+        </span>
+
+        <button class="current-location">Current</button>
+
+        <br />
+        <br />
+        <p>Johannesburg, South Africa 📍</p>
+        <br />
+
+        <p><strong>11 February, 17:45</strong></p>
+        <p>Day 20° | Night 16°</p>
+        <br />
+        <div class="row">
+          <div class="col-6">
+            <h1>
+              <i class="fa-solid fa-cloud-showers-heavy"></i>
+              19
+            </h1>
+            <span>
+              <p class="unit">°C | F°</p>
+            </span>
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Percipation 80%</li>
+              <li>Humidity 50%</li>
+              <li>Wind 6km/h</li>
+            </ul>
+          </div>
+        </div>
+        <br />
       </div>
-      <br />
+      <a href="https://github.com/SiyamukelaZwane/sheCodesPlusProject">
+        Open source-code</a
+      >
+      <span>
+        <p class="developer">by Siyamukela Zwane</p>
+      </span>
     </div>
-    <a href="https://github.com/SiyamukelaZwane/sheCodesPlusProject">
-      Open source-code</a
-    >
-    <span>
-      <p class="developer">by Siyamukela Zwane</p>
-    </span>
-    <br />
-    <br />
   </body>
 </html>
