--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Today</title>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,9 +23,9 @@
     <div class="container block">
       <div class="weather-app">
         <div class="row row-header">
-          <div class="col-4 today"><h3>Today</h3></div>
-          <div class="col"><h3>Tomorrow</h3></div>
-          <div class="col"><h3>5 days</h3></div>
+          <div class="col-4 today"><h4>Today</h4></div>
+          <div class="col"><h4>Tomorrow</h4></div>
+          <div class="col"><h4>5 days</h4></div>
         </div>
         <br />
 
@@ -41,8 +42,7 @@
 
         <br />
         <br />
-        <p>Johannesburg, South Africa 📍</p>
-        <br />
+        <h3>Johannesburg, South Africa 📍</h3>
 
         <p><strong>11 February, 17:45</strong></p>
         <p>Day 20° | Night 16°</p>
@@ -65,7 +65,6 @@
             </ul>
           </div>
         </div>
-        <br />
       </div>
       <a href="https://github.com/SiyamukelaZwane/sheCodesPlusProject">
         Open source-code</a
@@ -74,5 +73,6 @@
         <p class="developer">by Siyamukela Zwane</p>
       </span>
     </div>
+    <br />
   </body>
 </html>
